--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -214,9 +214,11 @@
 .post-link--subtitle {
     margin-left: 10px;
     font-style: italic;
+    transition: color 0.5s ease-out;
 }
 
 .post-link:hover .post-link--subtitle {
+    transition: color 0.5s ease-in;
     color: #74a7ea;
 }
 
