--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -108,6 +108,7 @@ a {
   transition: background 0.5s ease-out;
   padding: 4px;
   border-radius: 4px;  
+  transition: color 0.5s ease-out;
 
   &:visited {
     //color: darken($brand-color, 15%);
@@ -115,7 +116,7 @@ a {
 
   &:hover {
     color: $text-color;
-    //text-decoration: underline;
+    transition: color 0.5s ease-out;
     background: lightgray;
     transition: background 0.5s ease-in;
   }
